scrolling should no longer refresh on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ a {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
+html,
+body {
+  overscroll-behavior-y: contain;
+}
 html {
   display: flex;
   height: 100%;
